# InertialFlowCutter

./: .gitmodules  CMakeLists.txt  LICENSE  README.md  customize.cpp  inertialflowcutter_order.py  query.cpp
evaluation/: README.md  build_order_table.py  build_parameterstudy_table.py  build_pareto_table.py  build_scalability_table.py  compute_orders_for_all_partitioners.sh  configurable_inertialflowcutter_order.py  flowcutter_cut.py  flowcutter_order.py  inertialflow_cut.py  inertialflow_order.py  inertialflowcutter_cut.py  inertialflowcutter_order.py  kahip_cut.py  kahip_order.py  metis_cut.py  metis_order.sh  order_experiments.py  order_running_time.csv  parameterstudy.py  parameterstudy_configs.csv  toplevel_cut_experiments.py
src/: array_id_func.h  connected_components.h  console.cpp  csv.h  cut.h  dinic.h  fancy_input.cpp  file_utility.cpp  flow_cutter.h  flow_cutter_accelerated.h  flow_cutter_config.h  flow_cutter_config.h.gen.py  flow_cutter_config.h.template  flow_cutter_dinic.h  ford_fulkerson.h  geo_pos.h  inertial_flow.h  io_helper.h  list_graph.cpp  list_graph.h  min_fill_in.h  my_kahip.h  node_flow_cutter.h  preorder.h  separator.h  tiny_id_func.h  vector_io.h
